[project]
name = "asttab"
version = "2025.11.23.0"
description = "Utilities for moving there-and-back between AST dumps and code."
readme = "README.md"
authors = [
    { name = "rbroderi", email = "richard.broderick@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
